headers/duckdb.hpp


typedef uint64_t idx_t;
struct ExpressionState {
	ExpressionState(const Expression &expr, ExpressionExecutorState &root);
	virtual ~ExpressionState() {
	}
	const Expression &expr;
	ExpressionExecutorState &root;
	vector<unique_ptr<ExpressionState>> child_states;
	vector<LogicalType> types;
	DataChunk intermediate_chunk;
	string name;
	CycleCounter profiler;
public:
	void AddChild(Expression *expr);
	void Finalize();
};
typedef std::function<void(DataChunk &, ExpressionState &, Vector &)> scalar_function_t;
typedef uint64_t idx_t;
typedef enum DUCKDB_TYPE {
	DUCKDB_TYPE_INVALID = 0,
	DUCKDB_TYPE_BOOLEAN,
	DUCKDB_TYPE_TINYINT,
	DUCKDB_TYPE_SMALLINT,
	DUCKDB_TYPE_INTEGER,
	DUCKDB_TYPE_BIGINT,
	DUCKDB_TYPE_UTINYINT,
	DUCKDB_TYPE_USMALLINT,
	DUCKDB_TYPE_UINTEGER,
	DUCKDB_TYPE_UBIGINT,
	DUCKDB_TYPE_FLOAT,
	DUCKDB_TYPE_DOUBLE,
	DUCKDB_TYPE_TIMESTAMP,
	DUCKDB_TYPE_DATE,
	DUCKDB_TYPE_TIME,
	DUCKDB_TYPE_INTERVAL,
	DUCKDB_TYPE_HUGEINT,
	DUCKDB_TYPE_VARCHAR,
	DUCKDB_TYPE_BLOB,
	DUCKDB_TYPE_DECIMAL,
	DUCKDB_TYPE_TIMESTAMP_S,
	DUCKDB_TYPE_TIMESTAMP_MS,
	DUCKDB_TYPE_TIMESTAMP_NS,
	DUCKDB_TYPE_ENUM,
	DUCKDB_TYPE_LIST,
	DUCKDB_TYPE_STRUCT,
	DUCKDB_TYPE_MAP,
	DUCKDB_TYPE_UUID,
	DUCKDB_TYPE_JSON,
} duckdb_type;
typedef struct {
#if DUCKDB_API_VERSION < DUCKDB_API_0_3_2
	void *data;
	bool *nullmask;
	duckdb_type type;
	char *name;
#else
	void *__deprecated_data;
	bool *__deprecated_nullmask;
	duckdb_type __deprecated_type;
	char *__deprecated_name;
#endif
	void *internal_data;
} duckdb_column;
typedef struct {
#if DUCKDB_API_VERSION < DUCKDB_API_0_3_2
	idx_t column_count;
	idx_t row_count;
	idx_t rows_changed;
	duckdb_column *columns;
	char *error_message;
#else
	idx_t __deprecated_column_count;
	idx_t __deprecated_row_count;
	idx_t __deprecated_rows_changed;
	duckdb_column *__deprecated_columns;
	char *__deprecated_error_message;
#endif
	void *internal_data;
} duckdb_result;
typedef void *duckdb_database;
typedef void *duckdb_connection;
typedef void *duckdb_config;
typedef void *duckdb_logical_type;
typedef void *duckdb_data_chunk;
typedef enum { DuckDBSuccess = 0, DuckDBError = 1 } duckdb_state;
DUCKDB_API duckdb_state duckdb_open_ext(const char *path, duckdb_database *out_database, duckdb_config config,
                                        char **out_error);
DUCKDB_API void duckdb_close(duckdb_database *database);
DUCKDB_API duckdb_state duckdb_connect(duckdb_database database, duckdb_connection *out_connection);
DUCKDB_API void duckdb_disconnect(duckdb_connection *connection);
DUCKDB_API duckdb_state duckdb_create_config(duckdb_config *out_config);
DUCKDB_API size_t duckdb_config_count();
DUCKDB_API duckdb_state duckdb_get_config_flag(size_t index, const char **out_name, const char **out_description);
DUCKDB_API duckdb_state duckdb_set_config(duckdb_config config, const char *name, const char *option);
DUCKDB_API void duckdb_destroy_config(duckdb_config *config);
DUCKDB_API duckdb_state duckdb_query(duckdb_connection connection, const char *query, duckdb_result *out_result);
DUCKDB_API void duckdb_destroy_result(duckdb_result *result);
DUCKDB_API const char *duckdb_column_name(duckdb_result *result, idx_t col);
DUCKDB_API duckdb_type duckdb_column_type(duckdb_result *result, idx_t col);
DUCKDB_API duckdb_logical_type duckdb_column_logical_type(duckdb_result *result, idx_t col);
DUCKDB_API idx_t duckdb_column_count(duckdb_result *result);
DUCKDB_API idx_t duckdb_row_count(duckdb_result *result);
DUCKDB_API idx_t duckdb_rows_changed(duckdb_result *result);
DUCKDB_API void *duckdb_column_data(duckdb_result *result, idx_t col);
DUCKDB_API bool *duckdb_nullmask_data(duckdb_result *result, idx_t col);
DUCKDB_API const char *duckdb_result_error(duckdb_result *result);
DUCKDB_API duckdb_data_chunk duckdb_result_get_chunk(duckdb_result result, idx_t chunk_index);
DUCKDB_API idx_t duckdb_result_chunk_count(duckdb_result result);
DUCKDB_API bool duckdb_value_boolean(duckdb_result *result, idx_t col, idx_t row);
DUCKDB_API int8_t duckdb_value_int8(duckdb_result *result, idx_t col, idx_t row);