lib/src/duckdb_bindings.dart


  int duckdb_open_ext(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<duckdb_database> out_database,
    duckdb_config config,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return _duckdb_open_ext(
      path,
      out_database,
      config,
      out_error,
    );
  }

  late final _duckdb_open_extPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<duckdb_database>,
              duckdb_config,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('duckdb_open_ext');
  late final _duckdb_open_ext = _duckdb_open_extPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<duckdb_database>,
          duckdb_config, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  void duckdb_close(
    ffi.Pointer<duckdb_database> database,
  ) {
    return _duckdb_close(
      database,
    );
  }

  late final _duckdb_closePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<duckdb_database>)>>(
      'duckdb_close');
  late final _duckdb_close = _duckdb_closePtr
      .asFunction<void Function(ffi.Pointer<duckdb_database>)>();

  int duckdb_connect(
    duckdb_database database,
    ffi.Pointer<duckdb_connection> out_connection,
  ) {
    return _duckdb_connect(
      database,
      out_connection,
    );
  }

  late final _duckdb_connectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_database,
              ffi.Pointer<duckdb_connection>)>>('duckdb_connect');
  late final _duckdb_connect = _duckdb_connectPtr.asFunction<
      int Function(duckdb_database, ffi.Pointer<duckdb_connection>)>();

  void duckdb_disconnect(
    ffi.Pointer<duckdb_connection> connection,
  ) {
    return _duckdb_disconnect(
      connection,
    );
  }

  late final _duckdb_disconnectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<duckdb_connection>)>>('duckdb_disconnect');
  late final _duckdb_disconnect = _duckdb_disconnectPtr
      .asFunction<void Function(ffi.Pointer<duckdb_connection>)>();

  ffi.Pointer<ffi.Char> duckdb_library_version() {
    return _duckdb_library_version();
  }

  late final _duckdb_library_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'duckdb_library_version');
  late final _duckdb_library_version =
      _duckdb_library_versionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  int duckdb_create_config(
    ffi.Pointer<duckdb_config> out_config,
  ) {
    return _duckdb_create_config(
      out_config,
    );
  }

  late final _duckdb_create_configPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<duckdb_config>)>>(
      'duckdb_create_config');
  late final _duckdb_create_config = _duckdb_create_configPtr
      .asFunction<int Function(ffi.Pointer<duckdb_config>)>();

  int duckdb_config_count() {
    return _duckdb_config_count();
  }

  late final _duckdb_config_countPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>('duckdb_config_count');
  late final _duckdb_config_count =
      _duckdb_config_countPtr.asFunction<int Function()>();

  int duckdb_get_config_flag(
    int index,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_name,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_description,
  ) {
    return _duckdb_get_config_flag(
      index,
      out_name,
      out_description,
    );
  }

  late final _duckdb_get_config_flagPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Size, ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('duckdb_get_config_flag');
  late final _duckdb_get_config_flag = _duckdb_get_config_flagPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  int duckdb_set_config(
    duckdb_config config,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Char> option,
  ) {
    return _duckdb_set_config(
      config,
      name,
      option,
    );
  }

  late final _duckdb_set_configPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_config, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('duckdb_set_config');
  late final _duckdb_set_config = _duckdb_set_configPtr.asFunction<
      int Function(
          duckdb_config, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void duckdb_destroy_config(
    ffi.Pointer<duckdb_config> config,
  ) {
    return _duckdb_destroy_config(
      config,
    );
  }

  late final _duckdb_destroy_configPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<duckdb_config>)>>(
      'duckdb_destroy_config');
  late final _duckdb_destroy_config = _duckdb_destroy_configPtr
      .asFunction<void Function(ffi.Pointer<duckdb_config>)>();

  int duckdb_query(
    duckdb_connection connection,
    ffi.Pointer<ffi.Char> query,
    ffi.Pointer<duckdb_result> out_result,
  ) {
    return _duckdb_query(
      connection,
      query,
      out_result,
    );
  }

  late final _duckdb_queryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_connection, ffi.Pointer<ffi.Char>,
              ffi.Pointer<duckdb_result>)>>('duckdb_query');
  late final _duckdb_query = _duckdb_queryPtr.asFunction<
      int Function(duckdb_connection, ffi.Pointer<ffi.Char>,
          ffi.Pointer<duckdb_result>)>();

  void duckdb_destroy_result(
    ffi.Pointer<duckdb_result> result,
  ) {
    return _duckdb_destroy_result(
      result,
    );
  }

  late final _duckdb_destroy_resultPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<duckdb_result>)>>(
      'duckdb_destroy_result');
  late final _duckdb_destroy_result = _duckdb_destroy_resultPtr
      .asFunction<void Function(ffi.Pointer<duckdb_result>)>();

  ffi.Pointer<ffi.Char> duckdb_column_name(
    ffi.Pointer<duckdb_result> result,
    int col,
  ) {
    return _duckdb_column_name(
      result,
      col,
    );
  }

  late final _duckdb_column_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<duckdb_result>, idx_t)>>('duckdb_column_name');
  late final _duckdb_column_name = _duckdb_column_namePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<duckdb_result>, int)>();

  int duckdb_column_type(
    ffi.Pointer<duckdb_result> result,
    int col,
  ) {
    return _duckdb_column_type(
      result,
      col,
    );
  }

  late final _duckdb_column_typePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<duckdb_result>, idx_t)>>('duckdb_column_type');
  late final _duckdb_column_type = _duckdb_column_typePtr
      .asFunction<int Function(ffi.Pointer<duckdb_result>, int)>();

  duckdb_logical_type duckdb_column_logical_type(
    ffi.Pointer<duckdb_result> result,
    int col,
  ) {
    return _duckdb_column_logical_type(
      result,
      col,
    );
  }

  late final _duckdb_column_logical_typePtr = _lookup<
      ffi.NativeFunction<
          duckdb_logical_type Function(ffi.Pointer<duckdb_result>,
              idx_t)>>('duckdb_column_logical_type');
  late final _duckdb_column_logical_type =
      _duckdb_column_logical_typePtr.asFunction<
          duckdb_logical_type Function(ffi.Pointer<duckdb_result>, int)>();

  int duckdb_column_count(
    ffi.Pointer<duckdb_result> result,
  ) {
    return _duckdb_column_count(
      result,
    );
  }

  late final _duckdb_column_countPtr =
      _lookup<ffi.NativeFunction<idx_t Function(ffi.Pointer<duckdb_result>)>>(
          'duckdb_column_count');
  late final _duckdb_column_count = _duckdb_column_countPtr
      .asFunction<int Function(ffi.Pointer<duckdb_result>)>();

  int duckdb_row_count(
    ffi.Pointer<duckdb_result> result,
  ) {
    return _duckdb_row_count(
      result,
    );
  }

  late final _duckdb_row_countPtr =
      _lookup<ffi.NativeFunction<idx_t Function(ffi.Pointer<duckdb_result>)>>(
          'duckdb_row_count');
  late final _duckdb_row_count = _duckdb_row_countPtr
      .asFunction<int Function(ffi.Pointer<duckdb_result>)>();

  int duckdb_rows_changed(
    ffi.Pointer<duckdb_result> result,
  ) {
    return _duckdb_rows_changed(
      result,
    );
  }

  late final _duckdb_rows_changedPtr =
      _lookup<ffi.NativeFunction<idx_t Function(ffi.Pointer<duckdb_result>)>>(
          'duckdb_rows_changed');
  late final _duckdb_rows_changed = _duckdb_rows_changedPtr
      .asFunction<int Function(ffi.Pointer<duckdb_result>)>();

  ffi.Pointer<ffi.Void> duckdb_column_data(
    ffi.Pointer<duckdb_result> result,
    int col,
  ) {
    return _duckdb_column_data(
      result,
      col,
    );
  }

  late final _duckdb_column_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<duckdb_result>, idx_t)>>('duckdb_column_data');
  late final _duckdb_column_data = _duckdb_column_dataPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(ffi.Pointer<duckdb_result>, int)>();

  ffi.Pointer<ffi.Bool> duckdb_nullmask_data(
    ffi.Pointer<duckdb_result> result,
    int col,
  ) {
    return _duckdb_nullmask_data(
      result,
      col,
    );
  }

  late final _duckdb_nullmask_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Bool> Function(
              ffi.Pointer<duckdb_result>, idx_t)>>('duckdb_nullmask_data');
  late final _duckdb_nullmask_data = _duckdb_nullmask_dataPtr.asFunction<
      ffi.Pointer<ffi.Bool> Function(ffi.Pointer<duckdb_result>, int)>();

  ffi.Pointer<ffi.Char> duckdb_result_error(
    ffi.Pointer<duckdb_result> result,
  ) {
    return _duckdb_result_error(
      result,
    );
  }

  late final _duckdb_result_errorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<duckdb_result>)>>('duckdb_result_error');
  late final _duckdb_result_error = _duckdb_result_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<duckdb_result>)>();

  duckdb_data_chunk duckdb_result_get_chunk(
    duckdb_result result,
    int chunk_index,
  ) {
    return _duckdb_result_get_chunk(
      result,
      chunk_index,
    );
  }

  late final _duckdb_result_get_chunkPtr = _lookup<
          ffi.NativeFunction<duckdb_data_chunk Function(duckdb_result, idx_t)>>(
      'duckdb_result_get_chunk');
  late final _duckdb_result_get_chunk = _duckdb_result_get_chunkPtr
      .asFunction<duckdb_data_chunk Function(duckdb_result, int)>();

  int duckdb_result_chunk_count(
    duckdb_result result,
  ) {
    return _duckdb_result_chunk_count(
      result,
    );
  }

  late final _duckdb_result_chunk_countPtr =
      _lookup<ffi.NativeFunction<idx_t Function(duckdb_result)>>(
          'duckdb_result_chunk_count');
  late final _duckdb_result_chunk_count =
      _duckdb_result_chunk_countPtr.asFunction<int Function(duckdb_result)>();

  bool duckdb_value_boolean(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_boolean(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_booleanPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<duckdb_result>, idx_t,
              idx_t)>>('duckdb_value_boolean');
  late final _duckdb_value_boolean = _duckdb_value_booleanPtr
      .asFunction<bool Function(ffi.Pointer<duckdb_result>, int, int)>();

  int duckdb_value_int8(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_int8(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_int8Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Pointer<duckdb_result>, idx_t, idx_t)>>('duckdb_value_int8');
  late final _duckdb_value_int8 = _duckdb_value_int8Ptr
      .asFunction<int Function(ffi.Pointer<duckdb_result>, int, int)>();
